force-app/main/default/objects/Large_Transaction_Movements__c/Large_Transaction_Movements__c.object-meta.xml
<CustomObject>
    <label>Large Transaction Movements</label>
    <nameField>
        <displayFormat>LTM-{000000}</displayFormat>
        <label>Large Transaction Movements Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Large Transaction Movements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>