force-app/main/default/objects/Large_Transaction_Movements__c/fields/Account_Reference__c.field-meta.xml
<CustomField>
    <fullName>Account_Reference__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Account Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>