force-app/main/default/objects/Large_Transaction_Movements__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Large Transaction Movements</relationshipLabel>
    <relationshipName>Large_Transaction_Movements</relationshipName>
    <type>Lookup</type>
</CustomField>