force-app/main/default/objects/Large_Transaction_Movements__c/fields/Customer_ID__c.field-meta.xml
<CustomField>
    <fullName>Customer_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Customer ID</label>
    <length>60</length>
    <type>Text</type>
</CustomField>