force-app/main/default/objects/Large_Transaction_Movements__c/fields/External_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Id__c</fullName>
    <description>Last 14 digits of Customer TMB Id +  Transaction Date Time + Account Number (CUST_ID_SUFFIX+TRAN_DATE+TRAN_TIME+ACCT_ID) 
Used as External Id for upsert job from data batch job.</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>External Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>