force-app/main/default/objects/Large_Transaction_Movements__c/fields/Transaction_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Date_Time__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Transaction Date Time</label>
    <type>DateTime</type>
</CustomField>